<resources>
    <string name="app_name">Pennywise2</string>
    <string name="label_min_compliance">Min Spending Goal Compliance</string>
    <string name="label_max_compliance">Max Spending Goal Compliance</string>
    <string name="max_score_format">%.0f%% categories stay under maximum</string>
    <string name="hint_amount">Amount (R)</string>
    <string name="btn_select_date">Select Date</string>
    <string name="hint_description">Description</string>
    <string name="btn_take_photo">Attach Receipt Photo</string>
    <string name="btn_save_expense">Save Expense</string>
    <string name="label_monthly_budget">Monthly Budget Progress</string>
    <string name="label_category_spending">Category Spending</string>
    <string name="btn_view_graph">View Spending Graph</string>
    <string name="btn_progress_dashboard">Progress Dashboard</string>
    <string name="btn_achievements">Achievements</string>
    <string name="btn_subscriptions">Subscriptions Detector</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_start_date">Start Date</string>
    <string name="btn_end_date">End Date</string>
    <string name="btn_load_graph">Load Graph</string>
    <string name="label_your_badges">Your Badges</string>
    <string name="btn_filter">Filter</string>
    <string name="btn_add_category">Add New Category</string>
    <string name="btn_show_totals">Show Totals</string>
    <string name="label_detected_subscriptions">Detected Subscriptions</string>
    <string name="hint_limit">Limit</string>
    <string name="app_display_name">PennyWise</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="link_register">Don\'t have an account? Register</string>
    <string name="title_create_account">Create Account</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="link_login">Already have an account? Login</string>
    <string name="label_total_budget">Total Monthly Budget</string>
    <string name="hint_total_limit">Total Limit (R)</string>
    <string name="label_category_limits">Category Limits</string>
    <string name="btn_save_all_budgets">Save All Budgets</string>
    <string name="hello_world">Hello World!</string>
    <string name="desc_compliance_smiley">Compliance status smiley</string>
    <string name="desc_receipt_photo">Receipt photo preview</string>
    <string name="desc_receipt_thumb">Receipt thumbnail</string>
    <string name="label_start_date">Start: %s</string>
    <string name="label_end_date">End: %s</string>
</resources>